Create get parents in class endpoint
